[package]
name = "shard-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.0"
bincode = "1.3.3"
celestia-rpc = "0.4.0"
celestia-types = "0.4.0"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full", "rt"] }
tokio-util = "0.7"
async-compat = "0.2"
anyhow = "1.0.89"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
hex = "0.4.3"
ed25519-dalek = "2.1.1"
keystore-rs = "0.1.0"
smol = "1.3.0"
futures-lite = "1.13.0"
async-lock = "2.8.0"
async-channel = "1.9.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
clap = { version = "4.0", features = ["derive"] }
ctrlc = { version = "3.2", features = ["termination"] }
