[package]
name = "shard-template"
version = "0.1.0"
edition = "2021"

[dependencies]

# webserver
axum = "0.6.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }

# celestia stuff
celestia-rpc = "0.4.0"
celestia-types = "0.4.0"

# serde
bincode = "1.3.3"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"

# concurrency
tokio = { version = "1.40.0", features = ["full", "rt"] }
tokio-util = "0.7"
async-compat = "0.2"
futures-lite = "1.13.0"
async-lock = "2.8.0"
async-channel = "1.9.0"

# binary stuff
log = "0.4.22"
pretty_env_logger = "0.5.0"
clap = { version = "4.0", features = ["derive"] }
ctrlc = { version = "3.2", features = ["termination"] }

# errors
anyhow = "1.0.89"
ed25519-dalek = "2.1.1"
prism-common = { git = "https://github.com/deltadevsde/prism", package = "prism-common" }
