[package]
name = "shard-template"
version = "0.1.0"
edition = "2021"

[dependencies]

# webserver
axum = "0.6.0"
reqwest = { version = "0.12.7", features = ["json"] }

# celestia stuff
celestia-rpc = "0.4.0"
celestia-types = "0.4.0"

# key management
prism-common = { git = "https://github.com/deltadevsde/prism", package = "prism-common" }
keystore-rs = { git = "https://github.com/deltadevsde/keystore" }

# serde
bincode = "1.3.3"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"

# concurrency
tokio = { version = "1.40.0", features = ["full", "rt"] }
tokio-util = "0.7"
async-lock = "2.8.0"

# binary stuff
log = "0.4.22"
pretty_env_logger = "0.5.0"
clap = { version = "4.0", features = ["derive"] }

# errors
anyhow = "1.0.89"
